# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  README.rst  publish_conda_pacakge_to_artifactory.yml  pylintrc  pyproject.toml
.github/workflows/: issue_to_jira.yml  pr_add_jira_summary.yml  python_analysis.yml
hooks/: __init__.py  check_copyright.py  git_message_hook.py
mirageoscience/: __init__.py
mirageoscience-pre-commit-hooks/: check_copyright.py  git_message_hook.py
mirageoscience-pre_commit_hooks/: git_message_hook.py
mirageoscience/hooks/: __init__.py  check_copyright.py  git_message_hook.py
pre_commit_hooks/: __init__.py  check-copyright.py  check_copyright.py  git_message_hook.py
tests/: __init__.py  check_copyright_test.py  git_message_hook.py  git_message_hook_test.py  version_test.py
