[tool.poetry]
name = "mirageoscience-pre-commit-hooks"

version = "1.0.0"

license = "MIT"
description = ""
repository = "https://github.com/MiraGeoscience/mirageoscience-pre-commit-hooks"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
readme = "README.rst"

include = [
    "LICENSE",
    "README.rst"
]

packages = [
    { include = "mirageoscience-pre-commit-hooks" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
check_copyright = "mirageoscience-pre-commit-hooks.check_copyright:main"
git_message_hook = "mirageoscience-pre-commit-hooks.git_message_hook:main"

[tool.flit.module]
name = "mirageoscience-pre-commit-hooks"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"