[tool.poetry]
name = "mirageoscience_pre_commit_hooks"

version = "1.0.0"

license = "MIT"
description = ""
repository = "https://github.com/MiraGeoscience/mirageoscience-pre-commit-hooks"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
readme = "README.rst"

include = [
    "LICENSE",
    "README.rst"
]

packages = [
    { include = "hooks" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
Pygments = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
tomli = "*"

[tool.poetry.scripts]
check_copyright = "hooks.check_copyright:main"
git_message_hook = "hooks.git_message_hook:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
